# android-camera-motion-detector

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  detector.cpp  detector_motion.cpp  detector_motion_image.cpp  detector_motion_image_background.cpp  detector_motion_image_blue.cpp  detector_motion_image_color.cpp  detector_motion_image_grayscale.cpp  detector_motion_image_green.cpp  detector_motion_image_red.cpp  detector_motion_image_white.cpp  detector_motion_red_lines.cpp  globals.h  lines_renderer.cpp  main.cpp  previewmode.h  renderer.cpp  renderer_red_chart.cpp  renderer_red_lines.cpp  renderer_texture.cpp  texture_renderer.cpp
app/src/main/java/com/app/motiondetector/: MainActivity.java
app/src/main/jni/: Android.mk  Application.mk
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
